--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -27,6 +27,15 @@ weights
 sampling          50
 math              2
 
+[CPU_MONITOR]
+algo_type monitor
+sampling 1000
+sensor VIRTUAL-CPU
+thresholds 90000
+thresholds_clr 85000
+actions shutdown
+action_info 0
+
 [SS-GPU]
 #algo_type        ss
 sampling          250
@@ -89,15 +98,6 @@ thresholds        65000      80000
 thresholds_clr    62000      75000
 actions           modem_proc modem_proc
 action_info       1          3
-
-[BATTERY_CHARGING_CTL]
-#algo_type        monitor
-sampling          10000
-sensors           case-therm-adc chg-temp-adc pa-therm0 mdm-core-usr
-thresholds        39000 41000 42000 44000 46000
-thresholds_clr    38000 40000 41000 43000 44000
-actions           battery battery battery battery battery
-action_info       1 2 3 4 5
 
 [VDD_RSTR_MONITOR-GPU]
 #algo_type        monitor
