mido: parts: set android:exported true  * Needed when targetting SDK 31  * Reference:   https://developer.android.com/about/versions/12/behavior-changes-12#exported
Signed-off-by: Kingsman44 <shivan.0972@gmail.com>
Signed-off-by: Pratyaksh Bharadwaj <pratyakshom.05@gmail.com>

--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -47,7 +47,7 @@
 
         <activity
             android:name=".soundcontrol.SoundControlSettingsActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/audio_title">
             <intent-filter>
                 <action android:name="com.android.settings.action.IA_SETTINGS" />
