--- a/AdvancedControls/AndroidManifest.xml
+++ b/AdvancedControls/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:label="@string/advanced_settings"
         android:icon="@drawable/ic_launcher_advc"
-        android:theme="@android:style/Theme.DeviceDefault.Settings"
+        android:theme="@style/Theme.SubSettingsBase"
         android:supportsRtl="true" >
         <activity
             android:name="com.thht.settings.device.DeviceSettings"
